Details

    Description

      https://buildbot.askmonty.org/buildbot/builders/kvm-deb-buster-amd64/builds/4307/steps/mtr-galera/logs/stdio

       
      Thread 1 (Thread 0x7f30e4066700 (LWP 8619)):
      #0  __pthread_kill (threadid=<optimized out>, signo=signo@entry=11) at ../sysdeps/unix/sysv/linux/pthread_kill.c:56
      #1  0x0000558eb38e4337 in my_write_core (sig=sig@entry=11) at ./mysys/stacktrace.c:386
      #2  0x0000558eb33f6f88 in handle_fatal_signal (sig=11) at ./sql/signal_handler.cc:355
      #3  <signal handler called>
      #4  wsrep_thd_query_state (thd=thd@entry=0x0) at ./sql/wsrep_mysqld.cc:2620
      #5  0x0000558eb357f66c in bg_wsrep_kill_trx (void_arg=0x7f30c00317b0) at ./storage/innobase/handler/ha_innodb.cc:18949
      #6  0x0000558eb320cda3 in handle_manager (arg=arg@entry=0x0) at ./sql/sql_manager.cc:112
      #7  0x0000558eb389616b in pfs_spawn_thread (arg=0x558eb5f6edc8) at ./storage/perfschema/pfs.cc:1869
      #8  0x00007f30e9dbffa3 in start_thread (arg=<optimized out>) at pthread_create.c:486
      #9  0x00007f30e9cee4cf in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95
      

      Attachments

        Issue Links

          Activity

            People

              jplindst Jan Lindström (Inactive)
              jplindst Jan Lindström (Inactive)
              Votes:
              1 Vote for this issue
              Watchers:
              6 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.