MDEV-25609 : Signal 11 on wsrep_mysqld.cc:2620

Victim thread might not be found from thread list if it was
already killed or it was disconnected. We should not continue
killing it.